--- a/utils/common/pom.xml
+++ b/utils/common/pom.xml
@@ -58,6 +58,11 @@
             <artifactId>commons-io</artifactId>
         </dependency>
         <dependency>
+            <!-- excluded from httpclient dependency in parent -->
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
         </dependency>
