--- a/pom.xml
+++ b/pom.xml
@@ -123,11 +123,10 @@
         <kxml2.servicemix.version>2.3.0_3</kxml2.servicemix.version>
         <!-- double-check downstream projects before changing jackson version -->
         <fasterxml.jackson.version>2.10.1</fasterxml.jackson.version>
-        <cxf.version>3.3.5</cxf.version>
-        <httpcomponents.httpclient.version>4.5.10</httpcomponents.httpclient.version> <!-- To match cxf-http-async -->
-        <httpcomponents.httpcore.version>4.4.12</httpcomponents.httpcore.version> <!-- To match cxf-http-async -->
-        <!-- @deprecated since 0.11 -->
-        <httpclient.version>4.5.10</httpclient.version> <!-- kept for compatibility in 0.11.0-SNAPSHOT, remove after -->
+        <cxf.version>3.3.8</cxf.version>
+        <httpcomponents.httpclient.version>4.5.13</httpcomponents.httpclient.version> <!-- To match cxf-http-async 3.3.8 -->
+        <httpcomponents.httpcore.version>4.4.13</httpcomponents.httpcore.version> <!-- To match cxf-http-async 3.3.8 -->
+        <commons-codec.version>1.13</commons-codec.version>
         <commons-lang3.version>3.3.2</commons-lang3.version>
         <groovy.version>2.4.15</groovy.version> <!-- Version 2.4.7 supported by https://github.com/groovy/groovy-eclipse/wiki/Groovy-Eclipse-2.9.1-Release-Notes; not sure what more recent will be -->
         <jsr305.version>2.0.1</jsr305.version>
@@ -164,14 +163,14 @@
         <jax-rs-api.version>2.1.1</jax-rs-api.version> <!-- differs from jclouds 2.1.2, which depends on v2.0.1 -->
         <maxmind.version>2.8.0-rc1</maxmind.version>
         <maxmind-db.version>1.2.1</maxmind-db.version>
-        <winrm4j.version>0.10.0</winrm4j.version>
+        <winrm4j.version>0.10.0</winrm4j.version><!-- TODO -->
         <felix-osgi-compendium.version>1.4.0</felix-osgi-compendium.version>
         <kubernetes-client.version>4.9.0</kubernetes-client.version>
 
         <!-- Dependencies shipped with vanilla karaf; update these when we update the karaf version -->
-        <karaf.version>4.2.8</karaf.version>
+        <karaf.version>4.2.9</karaf.version>
         <karaf.plugin.version>${karaf.version}</karaf.plugin.version>
-        <jetty.version>9.4.22.v20191022</jetty.version>
+        <jetty.version>9.4.35.v20201120</jetty.version>
         <commons-collections.version>3.2.2</commons-collections.version>
         <pax-web.version>7.2.14</pax-web.version>
         <jaxb-api.version>2.3.2</jaxb-api.version>
@@ -190,7 +189,7 @@
         <ow2.asm.version>5.2</ow2.asm.version> <!-- require 5.x from json-path -> json-smart -> accessors-smart; pax-web-core brings in 7.x -->
         <commons-beanutils.version>1.9.4</commons-beanutils.version>
         <javax.mail.version>1.4.7</javax.mail.version> <!-- version should align with 'jetty' feature -->
-        <cxf.javax.annotation-api.version>1.3.2</cxf.javax.annotation-api.version> <!-- cxf-specs feature v3.3.5 declares v1.3.2; jetty 9.4.22 declares v1.3 -->
+        <cxf.javax.annotation-api.version>1.3.2</cxf.javax.annotation-api.version> <!-- cxf-specs feature v3.3.8 declares v1.3.2; jetty 9.4.35 declares v1.3.2 -->
         <okio.version>1.15.0</okio.version>
 
         <!-- Test dependencies -->
